--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Browser de nois todos</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Browser Manager</title>
 
 </head>
-
 <body>
   <div id="root"></div>
   <script src="../src/index.js" type="jsx"></script>
